--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   <script type="module">
     import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-    // ★ここを置き換え
-    const supabaseUrl = "https://rrovjxpctekdjpgqylh.supabase.co";
+    // ★ここを置き換え　　　https://rrovjxpjctekdjpgqylh.supabase.co
+    const supabaseUrl = "https://rrovjxpjctekdjpgqylh.supabase.co";
     const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJyb3ZqeHBqY3Rla2RqcGdxeWxoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTcyNDE0NzAsImV4cCI6MjA3MjgxNzQ3MH0.8ukaDktr4p8mw20KWoXb3-NfcJOIIDWLV7D4jSf_jE8";
     const supabase = createClient(supabaseUrl, supabaseKey);
 
